# slate

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
benches/: bht.rs  lmtht.rs  mvht.rs  slate.rs
src/: cache.rs  checksum.rs  error.rs  formula.rs  lib.rs  main.rs  model.rs  proto.proto  proto.rs  serialize.rs  storage.rs  test.rs
src/algorithm/: mod.rs  test.rs
src/cache/: test.rs
src/checksum/: test.rs
src/formula/: test.rs  test_branches.rs  test_nodes.rs  test_roots.rs
src/inspect/: mod.rs
src/model/: mod.rs  test.rs
src/storage/: file.rs  memory.rs  mod.rs  rocksdb.rs  test.rs
src/storage/rocksdb/: test.rs
src/test/: mod.rs
