[package]
name = "slate"
version = "0.1.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1"
thiserror = "1"
byteorder = "1"
highway = "1"
sha2 = "0.10"
clap = "4"

[dev-dependencies]
rand = "0.8"
mt19937 = "2.0"
criterion = "0.5"
leveldb = "0.8"
db-key = "0.0.5"    # Match the version used by leveldb 0.8

[[bench]]
name = "slate"
harness = false

[features]
default = ["sha256", "panic_over_inconsistency"]
highwayhash64 = []
sha224 = []
sha256 = []
sha512 = []
sha512_224 = []
sha512_256 = []
panic_over_inconsistency = []
small_index = []
