[package]
name = "slate"
version = "0.2.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1"
thiserror = "2"
byteorder = "1"
highway = "1"
sha2 = "0.10"
clap = "4"

[dev-dependencies]

[features]
default = ["sha256", "panic_over_inconsistency"]
highwayhash64 = []
sha224 = []
sha256 = []
sha512 = []
sha512_224 = []
sha512_256 = []
panic_over_inconsistency = []
small_index = []
