[package]
name = "slate"
version = "0.2.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1"
thiserror = "2"
byteorder = "1"
highway = "1"
sha2 = "0.10"
clap = "4"
rocksdb = { version = "0.24", optional = true }
blake3 = { version = "1.8", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rayon = "1.11"

[features]
default = ["blake3", "panic_over_inconsistency"]
rocksdb = ["dep:rocksdb"]
highwayhash64 = []
sha224 = []
sha256 = []
sha512 = []
sha512_224 = []
sha512_256 = []
blake3 = ["dep:blake3"]
panic_over_inconsistency = []

[[bench]]
name = "slate"
harness = false
